@@ -1,2 +1,0 @@
-class <%= class_name %> < ActiveRecord::Base
-end
